(library
  (name js_of_ocaml_toplevel)
  (public_name js_of_ocaml-toplevel)
  (synopsis "Js_of_ocaml toplevel library")
  (wrapped (transition "Will be removed past 2019-04-01"))
  (libraries
    js_of_ocaml-compiler js_of_ocaml bytes
    compiler-libs.common
    compiler-libs.bytecomp compiler-libs.toplevel)
  (modules_without_implementation jsooTopIntf jsooTopWorkerIntf)
  (preprocess (pps js_of_ocaml-ppx)))
